appAB/app-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appa-deployment
  labels:
    app: appa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appa
  template:
    metadata:
      labels:
        app: appa
    spec:
      containers:
      - name: appa
        image: danurky/appa:v1.0.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: appa-service-nodeport
spec:
  type: NodePort
  selector:
    app: appa
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30301
