appAB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /appa.html
            pathType: Prefix
            backend:
              service:
                name: appa-service
                port:
                  number: 30301
          - path: /appb.html
            pathType: Prefix
            backend:
              service:
                name: appb-service
                port:
                  number: 30302
